crates/lang/macro/tests/ui/trait_def/fail/definition_assoc_const.stderr
error: associated constants in ink! trait definitions are not supported, yet
 --> $DIR/definition_assoc_const.rs:5:5
  |
5 |     const CONST: bool;
  |     ^^^^^^^^^^^^^^^^^^
